# django-application-deployment-with-ansible

./: README.md  ansible.cfg  dump.sql  inventory  pyproject.toml  test.yml  tutorial-playbook.yml
ansiblee_tutorial/: pyproject.toml
ansiblee_tutorial/tests/: test_ansiblee_tutorial.py
create-database/tasks/: main.yml
introduction/: inventory  test.yml
tests/tasks/: main.yml
ubuntu-common/tasks/: main.yml
